# AutoTestAgent

./: .env.example  .gitignore  README.md  local_skills.py  main.py  pyproject.toml  ui_test_agent.py
skills/login/: SKILL.md
skills/pharmacy-system-login/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: ui-test-skills.md
