[project]
name = "ui-test-agent"
version = "0.1.0"
description = "UI Automation Testing Agent based on Browser-Use with recording and replay capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.11.8",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ui-test = "ui_test_agent:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
